@@ -25,10 +25,10 @@
  * @test
  * @bug 8262891 8290709
  * @summary Check the pattern domination error are reported correctly.
- * @compile/fail/ref=Domination.out -XDrawDiagnostics --enable-preview -source ${jdk.version} Domination.java
+ * @enablePreview
+ * @compile/fail/ref=Domination.out -XDrawDiagnostics Domination.java
  */
 public class Domination {
-
     int testDominatesError1(Object o) {
         switch (o) {
             case CharSequence cs: return 0;
